# devopscenter

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions.yml
devopscenter/: .gitignore  __main__.py  base.py  devops_center.py
devopscenter/modules/kube/: cluster_utils.py  constants.py  context.py  kube_base.py  kube_manager.py  namespaces.py  not_found.py  pod.py  search.py
devopscenter/modules/kube/models/: pod.py
devopscenter/modules/kube/namespace/: namespaces.py  namespaces_manager.py
devopscenter/modules/kube/namespace/commands/: base_cmd.py  delete.py  exec.py  logs.py  pods.py
devopscenter/modules/kube/views/: base_view.py  custom_views.py  view_deployment.py  view_hpa.py  view_ingress.py  view_pod_resources.py  view_pvc.py  view_resources_usage.py  view_statefulsets.py
