[tool.poetry]
name = "devopscenter"
version = "0.1.0"
description = "Plattform for devops that has some useful commands included."
authors = ["Abdala Mariano Jose <marianoabdala@gmail.com>"]
license = "MIT"
packages = [
  {include = "devopscenter"},
]

[tool.poetry.scripts]
devopscenter = "devopscenter.__main__:main"

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.7"
kubernetes = "^23.3.0"
prompt-toolkit = "^3.0.29"
rich = "^12.3.0"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = "^1.3.3"}
jedi = "^0.18.1"
pylint = "^2.12.2"
bandit = "^1.7.2"
yapf = "^0.32.0"
pylint-json2html = "^0.4.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
